# banqline

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  flake.nix
.codex/skills/banqline-cli-usage/: SKILL.md
.codex/skills/banqline-cli-usage/agents/: openai.yaml
.codex/skills/banqline-cli-usage/references/: cli-workflows.md
.github/workflows/: release.yml
migrations/: 001_init.sql  002_add_category.sql  004_add_account_alias.sql
src/: cli.rs  config.rs  main.rs  output.rs  prompt.rs  session.rs
src/aggregator/: forecast.rs  mod.rs  summary.rs
src/alerter/: mod.rs  types.rs
src/auth/: callback.rs  jwt.rs  key.rs  mod.rs
src/client/: error.rs  mod.rs  types.rs
src/commands/: accounts.rs  alerts.rs  dispatcher.rs  doctor_bank.rs  forecast.rs  mod.rs  runtime.rs  summary.rs  sync.rs  tag.rs  transaction_tests.rs
src/store/: accounts.rs  balances.rs  categories.rs  metadata.rs  migrations.rs  mod.rs  models.rs  tests.rs  transactions.rs
src/store/tests/: accounts.rs  balances.rs  categories.rs  metadata.rs  schema.rs  transactions.rs
src/tagger/: group.rs  mod.rs
src/tui/: app.rs  mod.rs  widgets.rs
src/tui/app/: data.rs  events.rs  notes.rs  refresh.rs  render.rs  tagging.rs  tests.rs  txn_view.rs
src/tui/app/render/: alerts.rs  general.rs  modals.rs  report.rs  transactions.rs
src/tui/views/: mod.rs
tests/: cli_ux.rs
